--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,41 @@ header {
     background-color: #4F200D;
     box-shadow: 2px 2px 5px 2px #3a3a3a;
     width: 100%;
+    height: auto;
     z-index: 99;
     position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 header img {
     width: 100%;
     height: auto;
-    max-width: 400px;
+    max-width: 200px;
+    padding: 5px 0 5px 5px;
+}
+
+/* Nav menu */
+.nav {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .5s ease-out;
+    justify-content: center;
+}
+
+.fa-solid,
+.fa-bars {
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 5px 5px 5px 0;
+}
+
+/* Hidden checkbox */
+#side-menu {
+    display: none;
 }
