--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ header {
     border-radius: 0 0 1vh 1vh;
 }
 
+/* Logo image */
 header img {
     width: 100%;
     height: auto;
@@ -47,6 +48,7 @@ header img {
     padding: 5px 0 5px 5px;
 }
 
+/* Navbar list style */
 header a, li {
     text-decoration: none;
     list-style-type: none;
@@ -65,7 +67,33 @@ nav {
     box-shadow: 0 0.5vh 0.5vh 0.5vh var(--grey);
 }
 
-.fa-solid, .fa-bars {
+/* Hamburger icon */
+.fa-bars {
     color: var(--white);
     font-size: 2rem;
+}
+
+/* Menu position */
+#menu {
+    float: right;
+}
+
+#menu > li {
+    margin-bottom: 1vh;
+}
+
+/* Toggle menu */
+#side-menu:checked~nav {
+    display: block;
+    animation: menu-slide-left 0.3s ease;
+}
+
+/*Animation for toggle menu */
+@keyframes menu-slide-left {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
