--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,20 @@ footer {
     background-color: var(--brown);
 }
 
+#social-media {
+    display: flex;
+    padding: 2vh 1vh;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+#social-media i {
+    font-size: 2.5vh;
+    color: var(--white);
+}
+
+
+
 /* Media query for tablets and larger screens (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
