--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,12 @@ main {
     font-size: 1rem;
 }
 
+/* Explore Northeast section */
+.main-explore {
+    padding: 5%;
+    line-height: 2;
+}
+
 /* Footer */
 footer {
     background-color: var(--brown);
