--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,7 +399,6 @@ main {
     background-color: rgba(79, 32, 13, 0.8);
     border-radius: 1vh;
     padding: 1vh 2vw;
-    flex-grow: 1;
 }
 
 /* Font style for Question */
@@ -418,7 +417,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 1vh;
+    padding: 1vh 0;
 }
 
 /* Style Send button on the contact page */
@@ -528,6 +527,11 @@ footer p {
         transform: scale(1.3);
     }
 
+    #contact {
+        max-width: 50%;
+    }
+
+    /* Contact page text input hover effect */
     .text-input:hover {
         box-shadow: 3px 3px 6px 0px var(--yellow);
     }
