Add confirmation page after submit contact form and add meta for auto redirect to home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,6 +441,23 @@ main {
     resize: none;
 }
 
+/* Confirmation page */
+.thankyou-message {
+    /* Fallback for any browser without RGBA-support */
+    background-color: var(--brown);
+    /* Any browser with RGBA-support */
+    background-color: rgba(79, 32, 13, 0.8);
+    border-radius: 1vh;
+    text-align: center;
+    padding: 10% 20%;
+}
+
+/* Font style for welcome message */
+.thankyou-font-style {
+    margin-bottom: 2vh;
+    color: var(--white);
+}
+
 /* Footer */
 footer {
     background-color: var(--brown);
